--- a/index.htm
+++ b/index.htm
@@ -364,25 +364,66 @@
                       </div>
                     ))}
                   </section>
-
                   {/* Testimonials */}
                   <section className="bg-white rounded-2xl shadow-soft p-4 sm:p-6">
                     <div className="flex items-center justify-between mb-3">
-                      <h3 className="text-lg sm:text-xl font-bold text-[var(--primary)]">What Pet Parents Say</h3>
+                      <h3 className="text-lg sm:text-xl font-bold text-[var(--primary)]">
+                        What Pet Parents Say
+                      </h3>
                       <div className="flex items-center gap-2">
-                        <button className="px-3 py-1.5 rounded-lg border hover:bg-[var(--bg)]" aria-label="Previous" onClick={prevT}>‹</button>
-                        <button className="px-3 py-1.5 rounded-lg border hover:bg-[var(--bg)]" aria-label="Next" onClick={nextT}>›</button>
+                        <button
+                          className="px-3 py-1.5 rounded-lg border hover:bg-[var(--bg)]"
+                          aria-label="Previous"
+                          onClick={prevT}
+                        >
+                          ‹
+                        </button>
+                        <button
+                          className="px-3 py-1.5 rounded-lg border hover:bg-[var(--bg)]"
+                          aria-label="Next"
+                          onClick={nextT}
+                        >
+                          ›
+                        </button>
                       </div>
                     </div>
 
                     <div className="relative overflow-hidden">
-                      <div className="transition-all duration-500" style={{ transform: `translateX(-${tIndex * 100}%)`, display: 'grid', gridTemplateColumns: `repeat(${TESTIMONIALS.length}, 100%)` }}>
+                      <div
+                        className="transition-all duration-500"
+                        style={{
+                          transform: `translateX(-${tIndex * 100}%)`,
+                          display: "grid",
+                          gridTemplateColumns: `repeat(${TESTIMONIALS.length}, 100%)`,
+                        }}
+                      >
                         {TESTIMONIALS.map((t, idx) => (
                           <div key={idx} className="p-2">
-                            <div className="border rounded-2xl p-4 sm:p-6 bg-gradient-to-br from-indigo-50 to-teal-50">
-                              <div className="flex items-center gap-2 text-amber-500 text-lg mb-2">{"★".repeat(t.rating)}<span className="text-gray-500 text-sm">({t.rating}.0)</span></div>
-                              <p className="text-sm sm:text-base text-gray-800">{t.text}</p>
-                              <div className="mt-3 text-sm font-semibold text-gray-700">— {t.name}</div>
+                            {/* Google-review style with initials avatar */}
+                            <div className="flex items-start gap-3 border rounded-xl p-4 bg-white shadow-sm">
+                              {/* Initials avatar */}
+                              <div className="w-10 h-10 rounded-full bg-[var(--primary)] text-white flex items-center justify-center text-sm font-semibold">
+                                {t.name
+                                  .split(" ")
+                                  .map((w) => w[0])
+                                  .slice(0,1)
+                                  .join("")
+                                  .toUpperCase()}
+                              </div>
+
+                              <div className="flex-1">
+                                {/* Reviewer name */}
+                                <div className="font-semibold text-gray-900 text-sm">{t.name}</div>
+
+                                {/* Review text */}
+                                <p className="mt-1 text-gray-800 text-sm">"{t.text}"</p>
+
+                                {/* Star rating */}
+                                <div className="mt-1 flex items-center text-amber-500 text-sm leading-none">
+                                  {"★".repeat(t.rating)}
+                                  {Array(5 - t.rating).fill("☆")}
+                                </div>
+                              </div>
                             </div>
                           </div>
                         ))}
@@ -391,10 +432,18 @@
 
                     <div className="mt-3 flex items-center justify-center gap-2">
                       {TESTIMONIALS.map((_, i) => (
-                        <button key={i} onClick={() => setTIndex(i)} className={`w-2.5 h-2.5 rounded-full ${i===tIndex ? 'bg-[var(--primary)]' : 'bg-gray-300'}`} aria-label={`Go to slide ${i+1}`}></button>
+                        <button
+                          key={i}
+                          onClick={() => setTIndex(i)}
+                          className={`w-2.5 h-2.5 rounded-full ${
+                            i === tIndex ? "bg-[var(--primary)]" : "bg-gray-300"
+                          }`}
+                          aria-label={`Go to slide ${i + 1}`}
+                        ></button>
                       ))}
                     </div>
                   </section>
+                
                 </div>
               )}
 
