--- a/index.htm
+++ b/index.htm
@@ -143,6 +143,17 @@
           return () => clearInterval(id);
         }, []);
 
+        // ---------- NEW: Search state (desktop + mobile overlay) ----------
+        const [searchOpen, setSearchOpen] = useState(false);
+        const [searchQuery, setSearchQuery] = useState("");
+        const filteredProducts = useMemo(
+          () =>
+            CATALOG.filter(p =>
+              p.name.toLowerCase().includes(searchQuery.trim().toLowerCase())
+            ),
+          [searchQuery]
+        );
+
         return (
           <div className="min-h-screen">
             {/* Promo bar */}
@@ -150,44 +161,75 @@
               <span className="font-semibold">Flash Sale</span>: 15% off with <span className="font-mono bg-white text-black px-1 rounded">SMILE15</span> — Ends in {timeLeft}
             </div>
 
-            {/* Header */}
+            {/* ---------- UPDATED HEADER WITH SEARCH + COMPACT NAV ---------- */}
             <header className="sticky top-0 z-50 w-full bg-[var(--primary)] text-white shadow">
-              <div className="mx-auto max-w-screen-xl px-4 sm:px-6 py-3 sm:py-4 flex items-center justify-between gap-3">
-                {/* Logo as home */}
-                <button
-                  onClick={() => { setPage('landing'); window.scrollTo?.({ top: 0, behavior: 'smooth' }); }}
-                  className="flex items-center gap-2 group"
-                  aria-label="Go to Home"
-                  title="Paw Smile Dental — Home"
-                >
-                  <svg width="150" height="34" viewBox="0 0 320 72" fill="none" xmlns="http://www.w3.org/2000/svg" className="transition transform group-hover:scale-[1.02]">
-                    <defs>
-                      <linearGradient id="grad" x1="0" y1="0" x2="1" y2="1">
-                        <stop offset="0%" stopColor="#ffffff" stopOpacity="1"/>
-                        <stop offset="100%" stopColor="#dbeafe" stopOpacity="1"/>
-                      </linearGradient>
-                    </defs>
-                    <g>
-                      <circle cx="28" cy="30" r="10" fill="url(#grad)"/>
-                      <circle cx="18" cy="18" r="5" fill="#ffffff" opacity="0.9"/>
-                      <circle cx="28" cy="14" r="5" fill="#ffffff" opacity="0.9"/>
-                      <circle cx="38" cy="18" r="5" fill="#ffffff" opacity="0.9"/>
-                      <path d="M22 36c6-2 16-2 22 0 2 6-2 12-6 12-3 0-5-3-5-6 0 3-2 6-5 6-4 0-8-6-6-12z" fill="#ffffff"/>
-                    </g>
-                    <text x="68" y="44" font-family="Segoe UI, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif" font-weight="800" font-size="28" fill="#ffffff" letter-spacing="0.5">Paw Smile</text>
-                  </svg>
-                </button>
+              <div className="mx-auto max-w-screen-xl px-4 sm:px-6 py-3 sm:py-4 flex items-center gap-3">
+                {/* Left: Logo (fixed width) */}
+                <div className="w-[160px] shrink-0">
+                  <button
+                    onClick={() => { setPage('landing'); window.scrollTo?.({ top: 0, behavior: 'smooth' }); }}
+                    className="flex items-center gap-2 group"
+                    aria-label="Go to Home"
+                    title="Paw Smile Dental — Home"
+                  >
+                    <svg width="150" height="34" viewBox="0 0 320 72" fill="none" xmlns="http://www.w3.org/2000/svg" className="transition transform group-hover:scale-[1.02]">
+                      <defs>
+                        <linearGradient id="grad" x1="0" y1="0" x2="1" y2="1">
+                          <stop offset="0%" stopColor="#ffffff" stopOpacity="1"/>
+                          <stop offset="100%" stopColor="#dbeafe" stopOpacity="1"/>
+                        </linearGradient>
+                      </defs>
+                      <g>
+                        <circle cx="28" cy="30" r="10" fill="url(#grad)"/>
+                        <circle cx="18" cy="18" r="5" fill="#ffffff" opacity="0.9"/>
+                        <circle cx="28" cy="14" r="5" fill="#ffffff" opacity="0.9"/>
+                        <circle cx="38" cy="18" r="5" fill="#ffffff" opacity="0.9"/>
+                        <path d="M22 36c6-2 16-2 22 0 2 6-2 12-6 12-3 0-5-3-5-6 0 3-2 6-5 6-4 0-8-6-6-12z" fill="#ffffff"/>
+                      </g>
+                      <text x="68" y="44" font-family="Segoe UI, system-ui, -apple-system, Roboto, Helvetica, Arial, sans-serif" font-weight="800" font-size="28" fill="#ffffff" letter-spacing="0.5">Paw Smile</text>
+                    </svg>
+                  </button>
+                </div>
 
-                <nav className="hidden sm:flex items-center gap-4 text-sm md:text-base">
-                  <NavButton label="Home" goto="landing" />
-                  <NavButton label="About Us" goto="about" />
-                  <NavButton label="Shop" goto="shop" />
-                </nav>
+                {/* Center: Compact desktop nav */}
+                <div className="hidden sm:flex flex-1 justify-center">
+                  <nav className="flex items-center gap-2 rounded-full bg-white/10 backdrop-blur px-2 py-1">
+                    <button onClick={() => setPage('landing')} className="px-3 py-1 rounded-full hover:bg-white/20 text-sm font-medium">Home</button>
+                    <button onClick={() => setPage('about')}   className="px-3 py-1 rounded-full hover:bg-white/20 text-sm font-medium">About Us</button>
+                    <button onClick={() => setPage('shop')}    className="px-3 py-1 rounded-full hover:bg-white/20 text-sm font-medium">Shop</button>
+                  </nav>
+                </div>
 
-                <div className="flex items-center gap-2">
+                {/* Right: Desktop search + cart / Mobile actions */}
+                <div className="flex-1 flex items-center justify-end gap-2">
+                  {/* Desktop search */}
+                  <div className="hidden md:flex items-center rounded-full bg-white/15 border border-white/20 px-3 py-1.5">
+                    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" className="opacity-80">
+                      <path d="M21 21l-4.3-4.3m1.8-4.7a7 7 0 11-14 0 7 7 0 0114 0z" stroke="white" strokeWidth="2" strokeLinecap="round" strokeLinejoin="round"/>
+                    </svg>
+                    <input
+                      value={searchQuery}
+                      onChange={(e) => setSearchQuery(e.target.value)}
+                      placeholder="Search products…"
+                      className="bg-transparent placeholder-white/70 text-white text-sm outline-none ml-2 w-36"
+                    />
+                  </div>
+
+                  {/* Mobile search icon */}
+                  <button
+                    onClick={() => setSearchOpen(true)}
+                    className="md:hidden inline-flex items-center justify-center rounded-lg bg-white/10 hover:bg-white/20 px-2.5 py-2"
+                    aria-label="Search"
+                  >
+                    🔎
+                  </button>
+
+                  {/* Mobile quick Shop link */}
                   <button onClick={() => setPage('shop')} className="sm:hidden text-sm bg-white/10 px-3 py-1.5 rounded-lg">
                     Shop
                   </button>
+
+                  {/* Cart */}
                   <button
                     onClick={() => setDrawerOpen(true)}
                     className="relative rounded-xl bg-white/10 px-3 sm:px-4 py-1.5 sm:py-2 hover:bg-white/20 transition text-sm md:text-base"
@@ -202,6 +244,56 @@
                 </div>
               </div>
             </header>
+
+            {/* ---------- Mobile Search Overlay ---------- */}
+            {searchOpen && (
+              <div className="fixed inset-0 z-50 bg-black/50">
+                <div className="absolute inset-x-0 top-0 bg-white rounded-b-2xl p-3">
+                  <div className="flex items-center gap-2">
+                    <input
+                      autoFocus
+                      value={searchQuery}
+                      onChange={(e) => setSearchQuery(e.target.value)}
+                      placeholder="Search products…"
+                      className="flex-1 rounded-xl border px-3 py-2 text-sm"
+                    />
+                    <button
+                      onClick={() => { setSearchOpen(false); setSearchQuery(""); }}
+                      className="px-3 py-2 rounded-lg bg-gray-100 hover:bg-gray-200 text-sm"
+                    >
+                      Cancel
+                    </button>
+                  </div>
+
+                  {/* Results */}
+                  <div className="mt-3 max-h-[60vh] overflow-auto divide-y">
+                    {filteredProducts.length === 0 && (
+                      <div className="py-6 text-center text-sm text-gray-500">No matches</div>
+                    )}
+                    {filteredProducts.map(p => (
+                      <button
+                        key={p.id}
+                        onClick={() => {
+                          setActiveId(p.id);
+                          setPage('detail');
+                          setSearchOpen(false);
+                        }}
+                        className="w-full flex items-center gap-3 py-3 hover:bg-gray-50 px-1 text-left"
+                      >
+                        <img src={p.image} alt={p.name} className="w-12 h-12 rounded-lg object-cover" />
+                        <div className="flex-1 min-w-0">
+                          <div className="font-medium truncate">{p.name}</div>
+                          <div className="text-xs text-gray-600">{formatINR(p.price)}</div>
+                        </div>
+                        <span className="text-[10px] bg-[var(--accent)] text-white px-2 py-0.5 rounded">
+                          -{pctOff(p.price, p.compareAt)}%
+                        </span>
+                      </button>
+                    ))}
+                  </div>
+                </div>
+              </div>
+            )}
 
             {/* Drawer */}
             {drawerOpen && (
@@ -593,7 +685,16 @@
                   </div>
                   <p className="mb-2">Order Total: <span className="font-semibold">{formatINR(Math.max(cartSubtotal - (couponApplied ? Math.round(cartSubtotal * 0.15) : 0), 0))}</span></p>
                   <p className="mb-4 text-sm text-gray-600">Pay via UPI, Cards, NetBanking, or Cash on Delivery.</p>
-                  <PrimaryBtn onClick={() => setPage('thankyou')}>Pay Now</PrimaryBtn>
+                  <PrimaryBtn
+                    onClick={() => {
+                      // Clear cart on successful purchase
+                      setCart([]);
+                      setCouponApplied(false);
+                      setPage('thankyou');
+                    }}
+                  >
+                    Pay Now
+                  </PrimaryBtn>
                 </section>
               )}
 
